# piafs

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  BUILD_GPU.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  License.md  Makefile.am  NOTICE.md  README.md  build_info.h.in  configure.ac
Tests/: CMakeLists.txt  README.md  test_mpi.sh
Tests/autotools/: .nfs804502b8015ad02e000034c0  generate-test-scripts.sh  regression_test_wrapper.sh  run_all_tests.sh  run_regression_test.sh  setup_benchmarks.sh
Tests/cmake/: RunGPURegressionTest.cmake  RunHPCRegressionTest.cmake  RunRegressionTest.cmake  SetupBenchmarks.cmake
Tests/unit/: CMakeLists.txt  Makefile.am
Tests/unit/ArrayFunctions/: test_array_functions.cpp
Tests/unit/BoundaryConditions/: test_boundary_conditions.cpp
Tests/unit/CommonFunctions/: test_common_functions.cpp
Tests/unit/FirstDerivative/: test_first_derivative.cpp
Tests/unit/IOFunctions/: test_io_functions.cpp
Tests/unit/InterpolationFunctions/: test_interpolation_functions.cpp
Tests/unit/LimiterFunctions/: test_limiter_functions.cpp
Tests/unit/MathFunctions/: test_math_functions.cpp
Tests/unit/TimeIntegration/: test_time_integration.cpp
Tests/unit/TridiagLU/: test_tridiag_lu.cpp
src/: CMakeLists.txt  Makefile.am  main.cpp
src/ArrayFunctions/: ArrayImplementations.c  CMakeLists.txt  Makefile.am
src/BoundaryConditions/: BCCleanup.c  BCDirichlet.c  BCExtrapolate.c  BCInitialize.c  BCNoslipWall.c  BCPeriodic.c  BCReflect.c  BCSlipWall.c  BCSponge.c  BCSubsonicAmbivalent.c  BCSubsonicInflow.c  BCSubsonicOutflow.c  BCSupersonicInflow.c  BCSupersonicOutflow.c  CMakeLists.txt  Makefile.am  gpu_bc_kernels.cu
src/CommonFunctions/: CMakeLists.txt  CommonFunctions.c
src/FirstDerivative/: CMakeLists.txt  FirstDerivativeFirstOrder.c  FirstDerivativeFourthOrder.c  FirstDerivativeSecondOrder.c
src/GPU/: CMakeLists.txt  gpu.c  gpu_arrayfunctions.c  gpu_config.c  gpu_initialize.c  gpu_initialize_example.c  gpu_io.c  gpu_kernels.cu  gpu_kernels_optimized.cu  gpu_launch.c  gpu_launch.cu  gpu_mpi.c  gpu_mpi_kernels.cu  gpu_mpi_launch.c  gpu_runtime.c  gpu_time_integration.c
src/HyParFunctions/: ApplyBoundaryConditions.c  BoundaryIntegral.c  CMakeLists.txt  CalculateConservationError.c  CalculateError.c  ExactSolution.c  HyperbolicFunction.c  IncrementFilename.c  Makefile.am  NonLinearInterpolation.c  SourceFunction.c  VolumeIntegral.c  gpu_derivative.cu  gpu_derivative_launch.c  gpu_derivative_launch.cu  gpu_first_derivative.c  gpu_hyperbolic.cu  gpu_hyperbolic_function.c  gpu_hyperbolic_launch.c  gpu_hyperbolic_launch.cu
src/IOFunctions/: CMakeLists.txt  Makefile.am  ReadArray.c  ReadArraywInterp.c  WriteArray.c  WriteBinary.c  WriteTecplot2D.c  WriteText.c
src/InterpolationFunctions/: CMakeLists.txt  CompactSchemeCleanup.c  CompactSchemeInitialize.c  Interp1PrimFifthOrderCRWENO.c  Interp1PrimFifthOrderCRWENOChar.c  Interp1PrimFifthOrderCompactUpwind.c  Interp1PrimFifthOrderCompactUpwindChar.c  Interp1PrimFifthOrderUpwind.c  Interp1PrimFifthOrderUpwindChar.c  Interp1PrimFifthOrderWENO.c  Interp1PrimFifthOrderWENOChar.c  Interp1PrimFirstOrderUpwind.c  Interp1PrimFirstOrderUpwindChar.c  Interp1PrimFourthOrderCentral.c  Interp1PrimFourthOrderCentralChar.c  Interp1PrimSecondOrderCentral.c  Interp1PrimSecondOrderCentralChar.c  Interp1PrimSecondOrderMUSCL.c  Interp1PrimSecondOrderMUSCLChar.c  Interp1PrimThirdOrderMUSCL.c  Interp1PrimThirdOrderMUSCLChar.c  MUSCLInitialize.c  Makefile.am  WENOCleanup.c  WENOFifthOrderCalculateWeights.c  WENOFifthOrderInitializeWeights.c  WENOInitialize.c  gpu_interpolation.cu  gpu_interpolation_function.c  gpu_interpolation_launch.c  gpu_interpolation_launch.cu  gpu_weno_weights.cu  gpu_weno_weights_function.c
src/LimiterFunctions/: CMakeLists.txt  LimiterGeneralizedMinMod.c  LimiterMinMod.c  LimiterSuperBee.c  LimiterVanLeer.c
src/MPIFunctions/: CMakeLists.txt  MPIBroadcast.c  MPICommunicators.c  MPIExchangeBoundaries1D.c  MPIExchangeBoundariesnD.c  MPIGatherArray1D.c  MPIGatherArraynD.c  MPIGetArrayDatanD.c  MPIGetFilename.c  MPIIOGroups.c  MPILocalDomainLimits.c  MPIMax.c  MPIMin.c  MPIPartition1D.c  MPIPartitionArray1D.c  MPIPartitionArraynD.c  MPIRank1D.c  MPIRanknD.c  MPISum.c
src/MathFunctions/: CMakeLists.txt  FillGhostCells.c  FindInterval.c  InterpolateGlobalnDVar.c  Makefile.am
src/PhysicalModels/: CMakeLists.txt  Makefile.am
src/PhysicalModels/Chemistry/: :w  CMakeLists.txt  ChemistryCleanup.c  ChemistryInitialize.c  ChemistrySolve.c  ChemistryWriteSpecies.c  Makefile.am  gpu_chemistry.c  gpu_chemistry.cu
src/PhysicalModels/Euler1D/: CMakeLists.txt  Euler1DCleanup.c  Euler1DComputeCFL.c  Euler1DEigen.c  Euler1DFlux.c  Euler1DFunctions.c  Euler1DInitialize.c  Euler1DPreStep.c  Euler1DSource.c  Euler1DUpwind.c  Euler1DWriteChem.c  Makefile.am  gpu_cfl.cu  gpu_cfl_function.c  gpu_cfl_launch.c  gpu_cfl_launch.cu  gpu_flux.cu  gpu_flux_function.c  gpu_flux_launch.c  gpu_source.cu  gpu_source_function.c  gpu_source_launch.c  gpu_source_launch.cu  gpu_upwind.cu  gpu_upwind_function.c  gpu_upwind_launch.c  gpu_upwind_launch.cu
src/PhysicalModels/NavierStokes2D/: CMakeLists.txt  Makefile.am  NavierStokes2DCleanup.c  NavierStokes2DComputeCFL.c  NavierStokes2DEigen.c  NavierStokes2DFlux.c  NavierStokes2DFunctions.c  NavierStokes2DInitialize.c  NavierStokes2DParabolicFunction.c  (+23 more)
src/Simulation/: CMakeLists.txt  Cleanup.c  EnsembleSimulationsDefine.cpp  InitialSolution.c  Initialize.c  InitializeBoundaries.c  InitializePhysics.c  InitializePhysicsData.c  InitializeSolvers.c  Makefile.am  OutputSolution.cpp  ReadInputs.c  SimulationWriteErrors.c  SingleSimulationDefine.cpp  Solve.cpp  WriteInputs.c
src/TimeIntegration/: CMakeLists.txt  TimeCleanup.c  TimeExplicitRKCleanup.c  TimeExplicitRKInitialize.c  TimeForwardEuler.c  TimeInitialize.c  TimePostStep.c  TimePreStep.c  TimePrintStep.c  TimeRHSFunctionExplicit.c  TimeRK.c  TimeStep.c
src/TridiagLU/: CMakeLists.txt  blocktridiagIterJacobi.c  blocktridiagLU.c  tridiagIterJacobi.c  tridiagLU.c  tridiagLUGS.c  tridiagLUInit.c
(+291 files in other folders)
